# dailyobsidian

./: .codex-mcp.json  .gitignore  .mcp.json  .prettierignore  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.base.json  vercel.json
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.github/workflows/: ci.yml  release.yml
api/: index.py
assets/: README.md  manifest.json
config/: mcp-app.example.json  mcp.local.example.json
docs/: architecture.md  local-development.md  privacy.md  release-checklist.md  remote-bridge.md  terms-placeholder.md  threat-model.md  tool-catalog.md
scripts/: verify-release.mjs
skills/obsidian-capture/: SKILL.md
skills/obsidian-capture/agents/: openai.yaml
skills/obsidian-capture/references/: capture-conventions.md
skills/obsidian-daily-review/: SKILL.md
skills/obsidian-daily-review/agents/: openai.yaml
skills/obsidian-note-refactor/: SKILL.md
skills/obsidian-note-refactor/agents/: openai.yaml
skills/obsidian-research-synthesis/: SKILL.md
skills/obsidian-research-synthesis/agents/: openai.yaml
skills/obsidian-vault-maintenance/: SKILL.md
skills/obsidian-vault-maintenance/agents/: openai.yaml
src/dailynotesmcp/: __init__.py  server.py
tests/: test_plugin_package.py  test_server.py
