[project]
name = "dailynotesmcp"
version = "0.1.0"
description = "A maintainable FastMCP server for daily notes."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastmcp>=3.0.0,<4.0.0",
]

[project.scripts]
dailynotesmcp = "dailynotesmcp.server:main"
dailynotesmcp-stdio = "dailynotesmcp.server:stdio_main"

[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.25,<1",
    "ruff>=0.11,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dailynotesmcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
